--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "dotenv": "^6.0.0",
     "dropbox": "^4.0.9",
     "immutable": "^3.8.2",
