--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-linear-undo": "^1.0.8",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
