--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "immutable": "^3.8.2",
     "lodash": "^4.17.10",
     "react": "^16.4.1",
+    "react-collapse": "^4.0.3",
     "react-dom": "^16.4.1",
     "react-hotkeys": "^1.1.4",
     "react-motion": "^0.5.2",
