--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lodash": "^4.17.10",
     "react": "^16.4.1",
     "react-collapse": "^4.0.3",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-hotkeys": "^1.1.4",
     "react-motion": "^0.5.2",
