--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-collapse": "^4.0.3",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
+    "react-dnd-touch-backend": "^0.5.1",
     "react-dom": "^16.4.1",
     "react-hotkeys": "^1.1.4",
     "react-motion": "^0.5.2",
