Update sample.env file with new keys

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 REACT_APP_DROPBOX_CLIENT_ID=u857m8dfqth1ofi
 REACT_APP_SAMPLE_FILE_CONTENTS=${SAMPLE_FILE_CONTENTS}
 REACT_APP_CHANGELOG_FILE_CONTENTS=${CHANGELOG_FILE_CONTENTS}
+REACT_APP_GOOGLE_DRIVE_API_KEY=AIzaSyCw4dHSrk9-FxVze0pDbYuc_CAbDQ0M1sc
+REACT_APP_GOOGLE_DRIVE_CLIENT_ID=280430119931-mjdm9vpr4cjasuh1effggapqj42oup7n.apps.googleusercontent.com
