--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-to-json": "^3.3.4",
+    "prettier": "1.14.3",
     "react-test-renderer": "^16.4.2"
   }
 }
