--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "2.0.3",
     "redux": "^4.0.0",
     "redux-linear-undo": "^1.0.8",
     "redux-thunk": "^2.3.0"
@@ -33,5 +33,11 @@
     "enzyme-to-json": "^3.3.4",
     "prettier": "1.14.3",
     "react-test-renderer": "^16.4.2"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
