--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "immutable": "^3.8.2",
     "lodash": "^4.17.10",
-    "react": "^16.4.1",
+    "react": "^16.7.0-alpha.0",
     "react-beautiful-dnd": "^9.0.2",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.4.1",
