--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^16.7.0-alpha.0",
     "react-beautiful-dnd": "^9.0.2",
     "react-collapse": "^4.0.3",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.7.0-alpha.0",
     "react-hotkeys": "^1.1.4",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
