--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "date-fns": "^1.30.1",
     "dotenv": "^6.0.0",
     "dropbox": "^4.0.9",
     "enzyme-adapter-react-16": "^1.1.1",
