--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "immutable": "^3.8.2",
     "lodash": "^4.17.10",
-    "react": "16.8.0-alpha.0",
-    "react-beautiful-dnd": "10.0.3",
+    "react": "16.8.3",
+    "react-beautiful-dnd": "10.0.4",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.7.0-alpha.0",
     "react-hotkeys": "^1.1.4",
     "react-motion": "^0.5.2",
-    "react-redux": "6.0.0",
+    "react-redux": "6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "2.1.5",
     "redux": "^4.0.0",
     "redux-linear-undo": "^1.0.8",
     "redux-thunk": "^2.3.0"
@@ -32,8 +32,8 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-to-json": "^3.3.4",
-    "prettier": "1.15.3",
-    "raw.macro": "^0.2.0",
+    "prettier": "1.16.4",
+    "raw.macro": "0.3.0",
     "react-test-renderer": "^16.4.2"
   },
   "browserslist": [
