chore: Pin Node to v11

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "org-web",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+     "node": "11.x"
+  },
   "dependencies": {
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
