feat: Add Procfile for prod build
  - Also install `serve` after deployment

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-     "node": "11.x"
+    "node": "11.x"
   },
   "dependencies": {
     "classnames": "^2.2.6",
@@ -30,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "npm install -g serve"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
