feat: Rename to `organice`

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "org-web",
-  "name": "org-web",
+  "short_name": "organice",
+  "name": "organice",
   "icons": [
     {
       "src": "favicon.ico",
