--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 REACT_APP_DROPBOX_CLIENT_ID=9mgtyjrvc0b1b2z
-REACT_APP_GOOGLE_DRIVE_API_KEY=
-REACT_APP_GOOGLE_DRIVE_CLIENT_ID=
+REACT_APP_GOOGLE_DRIVE_API_KEY=AIzaSyDG4BJbGdJBsH_3GoT_i-cN34Qbt7iMWJM
+REACT_APP_GOOGLE_DRIVE_CLIENT_ID=744091668516-pb0nf1k8kjfoml3d84pr4q4csh86r7ar.apps.googleusercontent.com
