--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "react-router-dom": "5.1.0",
     "react-scripts": "3.1.2",
     "redux": "^4.0.0",
-    "redux-linear-undo": "^1.0.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "redux-undo": "1.0.0-beta9-9-7"
   },
   "scripts": {
     "start": "react-scripts start",
