--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "12.9"
   },
   "dependencies": {
+    "bowser": "^2.6.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.0.1",
     "dotenv": "^8.0.0",
