--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "3.1.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "redux-undo": "1.0.0-beta9-9-7"
+    "redux-undo": "1.0.0-beta9-9-7",
+    "webdav": "^2.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
