--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,9 +55,9 @@ jobs:
     machine: true
     steps:
       - checkout
-      - run: docker build --rm=false -t ${DOCKER_HUB_USR}/organice:${CIRCLE_SHA1} .
+      - run: docker build --rm=false -t ${DOCKER_HUB_USR}/organice:${CIRCLE_BUILD_NUM} .
       - run: docker login --username ${DOCKER_HUB_USR} --password ${DOCKER_HUB_PWD}
-      - run: docker push ${DOCKER_HUB_USR}/organice:${CIRCLE_SHA1}
+      - run: docker push ${DOCKER_HUB_USR}/organice:${CIRCLE_BUILD_NUM}
 
 workflows:
   version: 2
