--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,16 +67,16 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      # - build
-      - push-image
-          # requires:
-          #   - build
-          # filters:
-          #   branches:
-          #     only: master
+      - build
       # - deploy:
       #     requires:
       #       - build
       #     filters:
       #       branches:
       #         only: master
+      - push-image
+          requires:
+            - build  # because of tests
+          # filters:
+          #   branches:
+          #     only: master
