--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ workflows:
       #     filters:
       #       branches:
       #         only: master
-      - push-image
+      - push-image:
           requires:
             - build  # because of tests
           # filters:
