--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -2,5 +2,7 @@ version: "3"
 services:
   organice:
     image: "twohundredok/organice:latest"
+    build:
+      context: .
     ports:
       - "5000:5000"
