Bugfix: Update manifest for PWA; add images with 192x192 and 512x512 px values

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,23 @@
   "name": "organice",
   "icons": [
     {
+      "src": "organice-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "organice-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
   ],
   "start_url": "./index.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
