Revert changes of display mode

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
     }
   ],
   "start_url": "./index.html",
-  "display": "fullscreen",
+  "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
