--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dropbox": "^4.0.30",
     "immutable": "^3.8.2",
     "lodash": "^4.17.15",
+    "pegjs": "^0.10.0",
     "react": "^16.8.3",
     "react-beautiful-dnd": "^12.0.0",
     "react-collapse": "^4.0.3",
