--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "webdav": "^2.10.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "./bin/compile_search_parser.sh && react-scripts start",
+    "build": "./bin/compile_search_parser.sh && react-scripts build",
+    "test": "./bin/compile_search_parser.sh && react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "postinstall": "if [ \"$ON_HEROKU\" ]; then npm install -g serve; fi"
   },
