Relax requirement on node engine version (#180)
Requiring an exact node engine version typically increases the
onboarding effort for new developers, since if they don't have exactly
the right version already installed, they need to install nvm and then
use it to get the right version.

So relax the version requirement to allow any minor version of the
12.x.y series.

Partially addresses #180.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "engines": {
-    "node": "12.13.1"
+    "node": "^12.13.1"
   },
   "dependencies": {
     "bowser": "^2.6.1",
