--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "postinstall": "if [ \"$ON_HEROKU\" ]; then npm install -g serve; fi"
   },
   "devDependencies": {
-    "@testing-library/react": "^9.3.0",
     "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "9.4.0",
     "prettier": "^1.16.4",
     "raw.macro": "0.3.0",
     "react-test-renderer": "^16.4.2"
