--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "9.4.0",
-    "prettier": "^1.16.4",
+    "prettier": "1.19.1",
     "raw.macro": "0.3.0",
     "react-test-renderer": "^16.4.2"
   },
