--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2
 jobs:
   deploy:
     docker:
-      - image: circleci/node:12.13-stretch
+      - image: circleci/node:12.13-buster
     steps:
       - checkout
       # Download and cache dependencies
@@ -17,10 +17,13 @@ jobs:
             - v1-dependencies-
       - run:
           name: Install lftp
-          command: sudo apt install lftp
+          command: sudo apt install lftp pandoc emacs
       - run:
           name: Deploy to https://org.200ok.ch
           command: ./bin/compile_and_upload.sh
+      - run:
+          name: Deploy documentation to https://org.200ok.ch/documentation.html
+          command: ./bin/compile_doc_and_upload.sh
 
   build:
     docker:
@@ -76,7 +79,7 @@ workflows:
               only: master
       - push-image:
           requires:
-            - build  # because of tests
+            - build # because of tests
           filters:
             branches:
               only: master
