--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "printWidth": 100
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "printWidth": 100,
+    "arrowParens": "always"
 }
