Install eslint-nibble
This allows us to easily see the linting errors grouped by category,
and to tackle them one category at a time.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "build": "./bin/compile_search_parser.sh && react-scripts build",
     "test": "./bin/compile_search_parser.sh && react-scripts test --env=jsdom",
     "eslint": "./node_modules/.bin/eslint --cache .",
+    "nibble": "./node_modules/.bin/eslint-nibble --cache .",
     "eject": "react-scripts eject",
     "postinstall": "if [ \"$ON_HEROKU\" ]; then npm install -g serve; fi"
   },
@@ -40,6 +41,7 @@
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "10.0.5",
     "eslint": "^6.6.0",
+    "eslint-nibble": "^5.1.0",
     "eslint-plugin-react": "^7.20.0",
     "prettier": "1.19.1",
     "raw.macro": "0.3.0",
