Install babel-eslint
This is necessary in order for eslint to understand some advanced
syntax such as class properties.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "10.0.5",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.6.0",
     "eslint-nibble": "^5.1.0",
     "eslint-plugin-react": "^7.20.0",
