--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.6.0",
     "eslint-nibble": "^5.1.0",
+    "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-react": "^7.20.0",
     "prettier": "1.19.1",
     "raw.macro": "0.3.0",
