--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-nibble": "^5.1.0",
     "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-redux": "^3.0.3",
     "prettier": "1.19.1",
     "raw.macro": "0.3.0",
     "react-test-renderer": "^16.13.0"
