eslint: Fix no-unused-vars rule
In some cases it is more helpful to keep unused variables as a
reminder of what they might be used for.  So use the convention of
prefixing unused variables with _ to indicate that they are not
currently used.

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -23,6 +23,11 @@ rules:
   no-extra-boolean-cast: off
   no-empty: off
   no-case-declarations: off
+  no-unused-vars:
+    - error
+    -
+      varsIgnorePattern: '_.+'
+      argsIgnorePattern: '_.*|reject'
   react/no-unescaped-entities: off
   react/display-name: off
   react/prop-types: off
