--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-redux": "^3.0.3",
     "prettier": "1.19.1",
+    "prettier-eslint": "^11.0.0",
     "raw.macro": "0.3.0",
     "react-test-renderer": "^16.13.0"
   },
