--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-redux": "^3.0.3",
-    "prettier": "1.19.1",
     "prettier-eslint": "^11.0.0",
+    "prettier": "^2.0.5",
     "prettier-eslint-cli": "^5.0.0",
     "raw.macro": "0.3.0",
     "react-test-renderer": "^16.13.0"
