Run prettier-eslint check in CircleCI
This guards against prettier violations creeping in and causing
conflicts between different contributor's repositories.

Note that prettier and prettier-eslint can disagree (in the same cases
where prettier disagrees with eslint), so we only run prettier-eslint,
not prettier.  Also clarify this in CONTRIBUTING.org.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,13 +46,29 @@ jobs:
           name: Install Dependencies
           command: yarn install --frozen-lockfile
 
+      - run:
+          name: Show Dependencies
+          command: yarn list
+
       - save_cache:
           name: Save Yarn Package Cache
           key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
 
-      - run: yarn eslint
+      - run:
+          name: eslint
+          command: yarn eslint
+
+      - run:
+          name: prettier-eslint
+          # Make the build output more useful by immediately showing full details of
+          # any style violations.
+          command: |
+            yarn prettier-eslint --write
+            GIT_PAGER= git diff
+            git reset --hard HEAD
+            yarn prettier-eslint --list-different
 
       - run: yarn test
 
