--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test": "./bin/compile_search_parser.sh && react-scripts test --env=jsdom",
     "eslint": "./node_modules/.bin/eslint --cache .",
     "nibble": "./node_modules/.bin/eslint-nibble --cache .",
+    "prettier": "./node_modules/.bin/prettier \"**/*.js\"",
     "prettier-eslint": "./node_modules/.bin/prettier-eslint \"`pwd`/**/*.js\"",
     "eject": "react-scripts eject",
     "postinstall": "if [ \"$ON_HEROKU\" ]; then npm install -g serve; fi"
