fix: CI (for building documentation)
     Without `gvfs`, Emacs won't compile WebDAV links: https://app.circleci.com/pipelines/github/200ok-ch/organice/745/workflows/4004fca6-0ca5-4f48-a2f1-ceb3f27fedf1/jobs/1257/parallel-runs/0/steps/0-105

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
-          command: sudo apt-get update -yq && sudo apt install -yq lftp pandoc emacs
+          command: sudo apt-get update -yq && sudo apt install -yq lftp pandoc gvfs emacs
       - run:
           name: Deploy to https://organice.200ok.ch
           command: ./bin/compile_and_upload.sh
