--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
 
   build:
     docker:
-      - image: circleci/node:12.13-stretch
+      - image: circleci/node:12.13-buster
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -74,7 +74,7 @@ jobs:
 
   build-docs:
     docker:
-      - image: circleci/node:12.13-stretch
+      - image: circleci/node:12.13-buster
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
