Add the coverage target for yarn
`yarn coverage` for computing the total test coverage.
Currently total coverage:
- statements: 50.63%
- branches:   44.16%
- functions:  35.91%
- lines:      52.02%

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "start": "./bin/compile_search_parser.sh && react-scripts start",
     "build": "./bin/compile_search_parser.sh && react-scripts build",
     "test": "./bin/compile_search_parser.sh && react-scripts test --env=jsdom",
+    "coverage": "./bin/compile_search_parser.sh && react-scripts test --env=jsdom --coverage --watchAll=false",
     "eslint": "./node_modules/.bin/eslint --cache .",
     "nibble": "./node_modules/.bin/eslint-nibble --cache .",
     "prettier": "./node_modules/.bin/prettier \"**/*.js\"",
@@ -54,6 +55,11 @@
     "prettier-eslint-cli": "^5.0.0",
     "raw.macro": "0.3.1",
     "react-test-renderer": "^16.13.1"
+  },
+  "jest": {
+    "coverageReporters": [
+      "text"
+    ]
   },
   "browserslist": [
     ">0.2%",
