--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "start": "./bin/compile_search_parser.sh && react-scripts start",
     "build": "./bin/compile_search_parser.sh && react-scripts build",
+    "test:dbg": "./bin/compile_search_parser.sh && react-scripts --inspect-brk test --runInBand --no-cache",
     "test": "./bin/compile_search_parser.sh && react-scripts test --env=jsdom",
     "eslint": "./node_modules/.bin/eslint --cache .",
     "nibble": "./node_modules/.bin/eslint-nibble --cache .",
