Mount .env in docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,5 @@ services:
     image: 'twohundredok/organice:latest'
     ports:
       - '5000:5000'
+    volumes:
+      - ./.env:/opt/organice/.env
