--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,25 @@
 #
 version: 2
 jobs:
-  deploy:
+  deploy-stage:
+    docker:
+      - image: circleci/node:12.13-buster
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore Yarn Package Cache
+          keys:
+            - yarn-packages-{{ checksum "yarn.lock" }}
+      - run:
+          name: Install dependencies
+          command: sudo apt-get update -yq && sudo apt install -yq lftp pandoc gvfs emacs
+      - run:
+          name: Deploy to https://staging.organice.200ok.ch
+          command: 'FTP_USER=${FTP_USER_STAGE} FTP_PASSWD=${FTP_PASSWD_STAGE} ./bin/compile_and_upload.sh'
+      - run:
+          name: Deploy documentation to https://staging.organice.200ok.ch/documentation.html
+          command: 'FTP_USER=${FTP_USER_STAGE} FTP_PASSWD=${FTP_PASSWD_STAGE} ./bin/compile_doc_and_upload.sh'
+  deploy-prod:
     docker:
       - image: circleci/node:12.13-buster
     steps:
@@ -26,10 +44,6 @@ jobs:
   build:
     docker:
       - image: circleci/node:12.13-buster
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
 
     working_directory: ~/repo
 
@@ -75,10 +89,6 @@ jobs:
   build-docs:
     docker:
       - image: circleci/node:12.13-buster
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
 
     working_directory: ~/repo
 
@@ -111,13 +121,20 @@ workflows:
     jobs:
       - build
       - build-docs
-      - deploy:
+      - deploy-prod:
           requires:
             - build
             - build-docs
           filters:
             branches:
               only: master
+      - deploy-stage:
+          requires:
+            - build
+            - build-docs
+          filters:
+            branches:
+              only: develop
       - push-image:
           requires:
             - build # because of tests
