--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 REACT_APP_DROPBOX_CLIENT_ID=your_dropbox_client_id
 REACT_APP_GOOGLE_DRIVE_API_KEY=your_google_drive_api_key
 REACT_APP_GOOGLE_DRIVE_CLIENT_ID=your_google_drive_oauth_client_id
+REACT_APP_ONEDRIVE_CLIENT_ID=your_onedrive_client_id
+REACT_APP_ONEDRIVE_TENANT_ID=your_onedrive_tenant_id
