GitLab: implement OAuth sign in
For #733

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 REACT_APP_DROPBOX_CLIENT_ID=your_dropbox_client_id
 REACT_APP_GOOGLE_DRIVE_API_KEY=your_google_drive_api_key
 REACT_APP_GOOGLE_DRIVE_CLIENT_ID=your_google_drive_oauth_client_id
+REACT_APP_GITLAB_CLIENT_ID=your_gitlab_client_id
+REACT_APP_GITLAB_SECRET=your_gitlab_secret
