--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,13 @@ services:
     image: 'twohundredok/organice:latest'
     ports:
       - '5000:5000'
+    logging:
+      driver: json-file
+  apache-webdav:
+    build:
+      context: ./
+      dockerfile: ./doc/webdav/Dockerfile
+    ports:
+      - '8080:80'
+    logging:
+      driver: journald
