enable hosting from subdirectory

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "^12.13.1"
   },
+  "homepage": "",
   "dependencies": {
     "@bity/oauth2-auth-code-pkce": "^2.13.0",
     "bowser": "^2.11.0",
