--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@bity/oauth2-auth-code-pkce": "^2.13.0",
+    "aos": "^2.3.4",
     "bowser": "^2.11.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
@@ -19,6 +20,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.7.0-alpha.0",
+    "react-feather": "^2.0.10",
     "react-hotkeys": "^2.0.0",
     "react-motion": "^0.5.2",
     "react-redux": "^7.2.1",
@@ -52,8 +54,8 @@
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-redux": "^3.3.0",
-    "prettier-eslint": "^11.0.0",
     "prettier": "^2.0.5",
+    "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.1",
     "raw.macro": "0.4.2",
     "react-test-renderer": "^17.0.1"
