chore: set server hostname and androidScheme

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,5 +2,9 @@
 	"appId": "ch.twohundredok.organice",
 	"appName": "organice",
 	"webDir": "build",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"server": {
+		"hostname": "app",
+		"androidScheme": "organice"
+	}
 }
