feat: login to gitlab works, dropbox maybe

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -4,7 +4,8 @@
 	"webDir": "build",
 	"bundledWebRuntime": false,
 	"server": {
-		"hostname": "app",
-		"androidScheme": "organice"
+		"allowNavigation": [
+			"https://gitlab.com"
+		]
 	}
 }
