feat: switch gitlab redirectUrl based on platform

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -3,9 +3,5 @@
 	"appName": "organice",
 	"webDir": "build",
 	"bundledWebRuntime": false,
-	"server": {
-		"allowNavigation": [
-			"https://gitlab.com"
-		]
-	}
+	"server": {}
 }
