fix: WebDAV in docker-compose
     This is a regression in newer versions of Apache2.

--- a/doc/webdav/webdav.conf
+++ b/doc/webdav/webdav.conf
@@ -1,4 +1,5 @@
 Alias /webdav /srv/dav/
+ServerName 127.0.0.1
 
 <Location "/webdav">
     Options Indexes
@@ -9,6 +10,7 @@ Alias /webdav /srv/dav/
     # <LimitExcept OPTIONS>
     #   Require valid-user
     # </LimitExcept>
+
 
     Header always set Access-Control-Allow-Origin "*"
     Header always set Access-Control-Allow-Methods "GET,POST,OPTIONS,DELETE,PUT,PROPFIND"
