fix: Rename sample demo file in bundled WebDAV image
     Otherwise there's a routing conflict between the actual
     sample.org file and the demo file.

--- a/doc/webdav/Dockerfile
+++ b/doc/webdav/Dockerfile
@@ -18,7 +18,7 @@ RUN mkdir /srv/dav
 RUN chmod 770 /srv/dav
 RUN chown www-data. /srv/dav
 
-COPY sample.org /srv/dav
+COPY sample.org /srv/dav/demo.org
 
 CMD apachectl -D FOREGROUND
 EXPOSE 80
