--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,14 @@
 version: '3'
 services:
   organice:
-    image: 'twohundredok/organice:latest'
+    build: .
+    # image: 'twohundredok/organice:latest'
     ports:
-      - '5000:5000'
+      - '5000:3000'
     logging:
       driver: json-file
+    environment:
+      ORGANICE_WEBDAV_URL: hello.world
   apache-webdav:
     build:
       context: ./
