--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,13 @@
 version: '3'
 services:
   organice:
-    build: .
-    # image: 'twohundredok/organice:latest'
+    image: 'twohundredok/organice:latest'
     ports:
-      - '5000:3000'
+      - '5000:5000'
     logging:
       driver: json-file
     environment:
-      ORGANICE_WEBDAV_URL: hello.alain
+      ORGANICE_WEBDAV_URL: http://webdav.example.com
   apache-webdav:
     build:
       context: ./
