refactor: make workflow for fewer phony targets

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,7 +1,7 @@
 {
 	"appId": "com.twohundredok.organice",
 	"appName": "organice",
-	"webDir": "build",
+	"webDir": "release",
 	"bundledWebRuntime": false,
 	"server": {
 		"cleartext": true
