Upgrade to react-scripts 4
* yarn add --exact react-scripts@4.0.3
* fixed OrgFile integration test

https://github.com/facebook/create-react-app/blob/main/CHANGELOG-4.x.md

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,6 +9,7 @@ extends:
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
+  process: readonly
 parser: babel-eslint
 parserOptions:
   ecmaFeatures:
