--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "@babel/helper-environment-visitor": "^7.18.2",
     "@bity/oauth2-auth-code-pkce": "^2.13.0",
-    "@capacitor/android": "^4.0.0",
-    "@capacitor/app": "^4.0.0",
-    "@capacitor/core": "^4.0.0",
+    "@capacitor/android": "^4.6.1",
+    "@capacitor/app": "^4.1.1",
+    "@capacitor/core": "^4.6.1",
+    "@capacitor/filesystem": "^4.1.4",
+    "@capawesome/capacitor-file-picker": "^0.5.2",
     "aos": "^2.3.4",
     "bowser": "^2.11.0",
     "classnames": "^2.2.6",
