[#932] Android upgrade recommendations
* android tools to 7.3.1
* manifest namespace recommendation

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
+
+    namespace 'com.twohundredok.organice'
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId "com.twohundredok.organice"
