[#932] POF of Android local storage access
* Dropped external capacitor plugins - not stable / usable
* Using custom Android plugin with Storage Access Framework
* Able to pick directory and list directory contents

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation "androidx.coordinatorlayout:coordinatorlayout:$androidxCoordinatorLayoutVersion"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
+    implementation 'androidx.documentfile:documentfile:1.0.1'
     implementation project(':capacitor-android')
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
