--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "immutable": "^4.3.7",
     "lodash": "^4.17.21",
     "pegjs": "^0.10.0",
-    "react": "^16.8.3",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-collapse": "^4.0.3",
-    "react-dom": "^16.7.0-alpha.0",
+    "react-collapse": "^5.1.1",
+    "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-hotkeys": "^2.0.0",
     "react-motion": "^0.5.2",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "6.26.2",
+    "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "redux-undo": "1.1.0",
@@ -46,19 +46,20 @@
     "postinstall": "if [ \"$ON_HEROKU\" ]; then npm install -g serve; fi"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "12.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "16.0.1",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.6.0",
-    "eslint-nibble": "^6.1.0",
-    "eslint-plugin-jest": "^23.20.0",
+    "eslint": "^9.11.0",
+    "eslint-nibble": "^8.1.0",
+    "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-react-redux": "^3.3.0",
+    "eslint-plugin-react-redux": "^4.2.0",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
     "prettier-eslint-cli": "^8.0.1",
     "raw.macro": "0.6.2",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^18.3.1"
   },
   "jest": {
     "coverageReporters": [
