chore: Testing some upgrades

--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "engines": {
     "node": "^20.17.0"
   },
+  "resolutions": {
+    "@babel/core": "^7.16.0"
+  },
   "dependencies": {
+    "@babel/core": "^7.16.0",
     "@bity/oauth2-auth-code-pkce": "^2.13.0",
     "aos": "^2.3.4",
     "bowser": "^2.11.0",
     "classnames": "^2.5.1",
+    "crypto": "npm:crypto-browserify",
     "date-fns": "^4.1.0",
     "dropbox": "10.34.0",
     "immutable": "^4.3.7",
     "lodash": "^4.17.21",
+    "path": "npm:path-browserify",
     "pegjs": "^0.10.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -24,19 +30,19 @@
     "react-motion": "^0.5.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "5.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "redux-undo": "1.1.0",
-    "crypto": "npm:crypto-browserify",
+    "sass": "^1.80.6",
     "stream": "npm:stream-browserify",
-    "vm": "npm:vm-browserify",
-    "path": "npm:path-browserify",
     "util": "npm:util",
+    "vm": "npm:vm-browserify",
+    "vm-browserify": "^1.1.2",
     "webdav": "^3.3.0"
   },
   "scripts": {
-    "start": "./bin/compile_search_parser.sh && react-scripts start",
+    "start": "./bin/compile_search_parser.sh && NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "./bin/compile_search_parser.sh && react-scripts build",
     "test:dbg": "./bin/compile_search_parser.sh && react-scripts --inspect-brk test --runInBand --no-cache",
     "test": "./bin/compile_search_parser.sh && react-scripts test --env=jsdom",
@@ -53,7 +59,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "16.0.1",
-    "eslint": "^9.11.0",
+    "eslint": "^7.32.0",
     "eslint-nibble": "^8.1.0",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-react": "^7.36.1",
