--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "engines": {
-    "node": "^12.13.1"
+    "node": "^16.20.2"
   },
   "dependencies": {
     "@bity/oauth2-auth-code-pkce": "^2.13.0",
@@ -15,7 +15,6 @@
     "dropbox": "10.31.0",
     "immutable": "^3.8.2",
     "lodash": "^4.17.21",
-    "node-sass": "4.13",
     "pegjs": "^0.10.0",
     "react": "^16.8.3",
     "react-beautiful-dnd": "^13.0.0",
@@ -30,6 +29,7 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "redux-undo": "1.0.1",
+    "sass": "^1.80.6",
     "webdav": "^3.3.0"
   },
   "scripts": {
