--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "redux-undo": "1.0.1",
-    "sass": "^1.80.6",
+    "sass": "1.44.0",
     "webdav": "^3.3.0"
   },
   "scripts": {
